# slpo

./: .gitignore  FILES.md  LICENSE  README.md  THIRD_PARTY.md  out  pyproject.toml  requirements-dpo.txt  requirements.txt
eval_scripts/: eval.py
outputs/2025-09-15/15-44-31/.hydra/: hydra.yaml
outputs/2025-09-15/15-48-40/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-15/16-03-24/.hydra/: hydra.yaml  overrides.yaml
paper/: sample.bib  sample.tex  slpo.bib  slpo.tex  viz.ipynb
src/: sentiment_analysis_results.json
src/eval/: __init__.py  llmjudge.py
src/experiment/_sentiment-phi2-textattack/: analyze_textattack.py  eval_base_phi2.py
src/experiment/sentiment/: analyze.py  data.py  model.py  sentiment.py  sft.py
src/experiment/sentiment_old/: create_prompts.py  eval_textattack.py
src/experiments/: eval.py  train.py  train_on_modal.py
src/llm_judge/: __init__.py  eval.py
src/outputs/2025-10-20/21-24-47/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/slpo/: data.py  slpo.py
test/: fixtures.py  fixtures_test.py
test/functional/: dpo_package_test.py  test_functional.py  test_microsoft_phi.py
test/ml/: ml_slpo_test.py  test_ml_slpo.py
test/test_utils/: memorization_model.py  memorization_model_test.py
test/unit/: eval_test.py  test_memorization_model.py  test_slpo.py
test/unit/eval/: llmjudge_test.py
test/unit/slpo/: ml_slpo_test.py  slpo_test.py
tests/unit/: test_memorization_model.py
